# vsqlite

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  example_table.cpp  example_table.h  main.cpp
include/vsqlite/: vsqlite.h  vsqlite_tables.h
src/: CMakeLists.txt  vsqlite.cpp  vsqlite_impl.h  vsqlite_tables.cpp
tests/: CMakeLists.txt  table_processes.h  table_req1.h  table_signature.h  test_functions.cpp  test_indexes.cpp  test_joins.cpp  test_table1.h  test_types.cpp
